fixed many spacing issues, fixed na pushhands workshop page, added na workshop documents

--- a/classes/prague/index.html
+++ b/classes/prague/index.html
@@ -1,168 +1,161 @@
 <!DOCTYPE HTML>
+
 <html>
-<head>
-<link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="../../assets/css/css.css">
-<link rel="stylesheet" href="../../assets/css/popup.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta charset="UTF-8">
-<title>Alex Dong Taiji</title>
-</head>
+
+  <head>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="../../assets/css/css.css">
+    <link rel="stylesheet" href="../../assets/css/popup.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>Alex Dong Taiji</title>
+  </head>
+
 <body>
-<header class="header-classes">
-<nav class="nav-homepage">
-<ul class="nav-ul-homepage">
-<li><a href="http://alexdongtaichi.com">Home</a></a></li>
-<li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
-<li><a href="../../classes/">Classes</a></li>
-<li><a href="../../legacy/">Legacy</a></li>
-<li><a class="workshop-highlight" href="../../workshops/">Workshops</a></li>
-<li><a class="store-button" href="../../store/">Store</a></li>
-</ul>
-</nav>
-</header>
-<div class="header-background">
-<h1>Prague, Czech Republic</h1>
-</div>
-<section class="history-classes">
-<div class="history-container classes-container">
-<div class="history-container classes-container instructor-container">
-<a href="#sarka-popup" class="animated_popup"><h1>Instructor: Sarka Rajtorova</h1></a>
-<div id="sarka-popup" class="image-popup" style="display:none">
-<h3>&#352;&#225;rka Rajtorov&#225;</h3>
-<img src="http://www.taichispirit.org.uk/images/sarka.jpg"></img>
-<p>
-My first martial arts experience was with Taekwon-Do ITF organised by
-the Czech Taekwon-Do Association at the "Kerberos" school in Prague
-from 1996 onwards. I attained technical level 5 - the level of a
-student's green-blue belt.  In Taekwon-Do, the colour green means "the
-growth of a green-leaved plant" and "making progress in
-learning". Blue signifies the sky and the direction of growth and
-development.
-</p>
-<p>
 
-I came to feel that I wanted to grow and develop in another direction,
-but in the spirit of the same philosophy, with respect for the ancient
-traditions of the world.
+  <header class="header-classes">
+    <nav class="nav-homepage">
+      <ul class="nav-ul-homepage">
+      <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+      <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
+      <li><a href="../../classes/">Classes</a></li>
+      <li><a href="../../legacy/">Legacy</a></li>
+      <li><a class="workshop-highlight" href="../../workshops/">Workshops</a></li>
+      <li><a class="store-button" href="../../store/">Store</a></li>
+      </ul>
+    </nav>
+  </header>
 
-</p>
-<p>
+  <div class="header-background">
+    <h1>Prague, Czech Republic</h1>
+  </div>
 
-In 2005 I met Jitka Horalkova, who was practising the Tung/Dong
-style of taijiquan, and I knew that I was in the right place.  I first
-met Master Alex Dong at his seminar in Prague in 2006, where I was
-totally captivated by taijiquan exercises, which gave me a new
-direction for the growth and development of my personality and led me
-to discover the teachings of feng shui and take an interest in Chinese
-medicine, self-healing, correct nutrition and a healthy lifestyle.
+  <section class="history-classes">
 
-</p>
-<p>
+    <div class="history-container classes-container">
+      <a href="#sarka-popup" class="animated_popup"><h1>Instructor: Sarka Rajtorova</h1></a>
+      <div id="sarka-popup" class="image-popup" style="display:none">
+        <h3>&#352;&#225;rka Rajtorov&#225;</h3>
+        <img src="http://www.taichispirit.org.uk/images/sarka.jpg"></img>
 
-I continue to study new exercises in Prague and I attend Master Alex
-Dong's seminars. In 2012 I went on Master Alex's China Tour, where I
-had the opportunity to discover the native land of Master Alex and his
-family, the birthplace of our martial art, as well as to get to know
-many interesting friends and students of Master Alex.
+        <p>My first martial arts experience was with Taekwon-Do ITF organised by
+        the Czech Taekwon-Do Association at the "Kerberos" school in Prague
+        from 1996 onwards. I attained technical level 5 - the level of a
+        student's green-blue belt.  In Taekwon-Do, the colour green means "the
+        growth of a green-leaved plant" and "making progress in
+        learning". Blue signifies the sky and the direction of growth and
+        development.</p>
 
-</p>
-<p>
+        <p>I came to feel that I wanted to grow and develop in another direction,
+        but in the spirit of the same philosophy, with respect for the ancient
+        traditions of the world.</p>
 
+        <p>In 2005 I met Jitka Horalkova, who was practising the Tung/Dong
+        style of taijiquan, and I knew that I was in the right place.  I first
+        met Master Alex Dong at his seminar in Prague in 2006, where I was
+        totally captivated by taijiquan exercises, which gave me a new
+        direction for the growth and development of my personality and led me
+        to discover the teachings of feng shui and take an interest in Chinese
+        medicine, self-healing, correct nutrition and a healthy lifestyle.</p>
 
-Taijiquan exercises have become a part of my life. Since 2011 I have
-been handing on knowledge of Master Alex's martial art to other
-students. I am happy to have been granted this opportunity.
-</p>
-</div>
+        <p>I continue to study new exercises in Prague and I attend Master Alex
+        Dong's seminars. In 2012 I went on Master Alex's China Tour, where I
+        had the opportunity to discover the native land of Master Alex and his
+        family, the birthplace of our martial art, as well as to get to know
+        many interesting friends and students of Master Alex.</p>
 
-<p>Class schedule</p>
-<ul>
-<li>Location: Centrum cviceni pro zdravi, Praha - Zbraslav</li>
-<li>Class: Mondays from 18:30 to 20:00</li>
-<li> Location: TJ Victoria Vestec, Vestec u Prahy</li>
-<li>Class: Tuesdays from 18:30 to 20:00</li>
-<li>Email: <a href="mailto:sarka.rajtorova@gmail.com">sarka.rajtorova@gmail.com</a></li>
-<li> Website: <a href="http://www.kondicestyl.cz/" target="_blank">www.kondicestyl.cz</a>
-</ul>
+        <p>Taijiquan exercises have become a part of my life. Since 2011 I have
+        been handing on knowledge of Master Alex's martial art to other
+        students. I am happy to have been granted this opportunity.</p>
+      </div>
 
+      <p><strong>Location:</strong> Centrum cviceni pro zdravi, Praha - Zbraslav
+      <br><strong>Class:</strong> Mondays from 18:30 to 20:00</p>
+      <p><strong>Location:</strong> TJ Victoria Vestec, Vestec u Prahy
+      <br><strong>Class:</strong> Tuesdays from 18:30 to 20:00</p>
+      <p><strong>Email:</strong> <a href="mailto:sarka.rajtorova@gmail.com">sarka.rajtorova@gmail.com</a>
+      <br><strong>Website:</strong> <a href="http://www.kondicestyl.cz/" target="_blank">www.kondicestyl.cz</a></p>
+    </div>
 
-</div>
-</section>
-<footer>
-<nav class="footer-homepage">
-<ul class="footer-ul-homepage">
-<li><a href="http://alexdongtaichi.com">Home</a></a></li>
-<li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
-<li><a href="../../classes/">Classes</a></li>
-<li><a href="../../legacy/">Legacy</a></li>
-<li><a href="../../workshops/">Workshops</a></li>
-<li><a href="../../store/">Store</a></li>
-</ul>
-</nav>
-</footer>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-<script src="../../assets/js/jquery.popup.js"></script>
-<script>
-$(function(){
-/*-------------------------------
-GENERAL EXAMPLES
--------------------------------*/
-// Default usage
-$('.default_popup').popup();
-// Animated popup
-$('.animated_popup').popup({
-show : function($popup, $back){
-var plugin = this,
-center = plugin.getCenter();
-$popup
-.css({
-top : - $popup.children().outerHeight(),
-left : center.left,
-opacity : 1
-})
-.animate({top : center.top}, 500, 'easeOutBack', function(){
-// Call the open callback
-plugin.o.afterOpen.call(plugin);
-});
-}
-});
-// Call ALL the callbacks
-$('.callback_popup').popup({
-beforeOpen : function(type){
-console.log('beforeOpen -', type);
-},
-afterOpen : function(){
-console.log('afterOpen');
-},
-beforeClose : function(){
-console.log('beforeClose');
-},
-afterClose : function(){
-console.log('afterClose');
-}
-});
-// Error popup
-$('.error_popup').popup({
-error : function(content, type){
-// Just call open again, it'll replace the content
-this.open('<h1>ERROR!</h1><p>Content "'+content+'" of type "'+type+'" could not be loaded.</p>', 'html');
-}
-});
-});
-/*---------------------
-JQUERY EASING
-*/
-$.extend($.easing, {
-easeOutBack: function (x, t, b, c, d, s) {
-if (s == undefined) s = 1.70158;
-return c*((t=t/d-1)*t*((s+1)*t + s) + 1) + b;
-},
-easeInBack: function (x, t, b, c, d, s) {
-if (s == undefined) s = 1.70158;
-return c*(t/=d)*t*((s+1)*t - s) + b;
-}
-});
-</script>
+  </section>
+
+  <footer>
+    <nav class="footer-homepage">
+      <ul class="footer-ul-homepage">
+        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
+        <li><a href="../../classes/">Classes</a></li>
+        <li><a href="../../legacy/">Legacy</a></li>
+        <li><a href="../../workshops/">Workshops</a></li>
+        <li><a href="../../store/">Store</a></li>
+      </ul>
+    </nav>
+  </footer>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+  <script src="../../assets/js/jquery.popup.js"></script>
+  <script>
+  $(function(){
+  /*-------------------------------
+  GENERAL EXAMPLES
+  -------------------------------*/
+  // Default usage
+  $('.default_popup').popup();
+  // Animated popup
+  $('.animated_popup').popup({
+  show : function($popup, $back){
+  var plugin = this,
+  center = plugin.getCenter();
+  $popup
+  .css({
+  top : - $popup.children().outerHeight(),
+  left : center.left,
+  opacity : 1
+  })
+  .animate({top : center.top}, 500, 'easeOutBack', function(){
+  // Call the open callback
+  plugin.o.afterOpen.call(plugin);
+  });
+  }
+  });
+  // Call ALL the callbacks
+  $('.callback_popup').popup({
+  beforeOpen : function(type){
+  console.log('beforeOpen -', type);
+  },
+  afterOpen : function(){
+  console.log('afterOpen');
+  },
+  beforeClose : function(){
+  console.log('beforeClose');
+  },
+  afterClose : function(){
+  console.log('afterClose');
+  }
+  });
+  // Error popup
+  $('.error_popup').popup({
+  error : function(content, type){
+  // Just call open again, it'll replace the content
+  this.open('<h1>ERROR!</h1><p>Content "'+content+'" of type "'+type+'" could not be loaded.</p>', 'html');
+  }
+  });
+  });
+  /*---------------------
+  JQUERY EASING
+  */
+  $.extend($.easing, {
+  easeOutBack: function (x, t, b, c, d, s) {
+  if (s == undefined) s = 1.70158;
+  return c*((t=t/d-1)*t*((s+1)*t + s) + 1) + b;
+  },
+  easeInBack: function (x, t, b, c, d, s) {
+  if (s == undefined) s = 1.70158;
+  return c*(t/=d)*t*((s+1)*t - s) + b;
+  }
+  });
+  </script>
+
 </body>
+
 </html>
