--- a/classes/vejle/index.html
+++ b/classes/vejle/index.html
@@ -1,103 +1,111 @@
 <!DOCTYPE HTML>
+
 <html>
+
 <head>
-<link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="../../assets/css/css.css">
-<link rel="stylesheet" href="../../assets/css/popup.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta charset="UTF-8">
-<title>Alex Dong Taiji</title>
+  <link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="../../assets/css/css.css">
+  <link rel="stylesheet" href="../../assets/css/popup.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <title>Alex Dong Taiji</title>
 </head>
+
 <body>
+
 <header class="header-classes">
 <nav class="nav-homepage">
-<ul class="nav-ul-homepage">
-<li><a href="http://alexdongtaichi.com">Home</a></a></li>
-<li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
-<li><a href="../../classes/">Classes</a></li>
-<li><a href="../../legacy/">Legacy</a></li>
-<li><a class="workshop-highlight" href="../../workshops/">Workshops</a></li>
-<li><a class="store-button" href="../../store/">Store</a></li>
-</ul>
+  <ul class="nav-ul-homepage">
+    <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+    <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
+    <li><a href="../../classes/">Classes</a></li>
+    <li><a href="../../legacy/">Legacy</a></li>
+    <li><a class="workshop-highlight" href="../../workshops/">Workshops</a></li>
+    <li><a class="store-button" href="../../store/">Store</a></li>
+  </ul>
 </nav>
 </header>
+
 <div class="header-background">
-<h1>Vejle, Denmark</h1>
+  <h1>Vejle, Denmark</h1>
 </div>
+
 <section class="history-classes">
-<div class="history-container classes-container">
-<div class="history-container classes-container instructor-container">
-<a href="#klaus-popup" class="animated_popup"><h1>Instructor: Klaus Kotschenreuther</h1></a>
-<div id="klaus-popup" class="image-popup" style="display:none">
-<h3>Klaus Kotschenreuther</h3>
-<img src="http://www.taichispirit.org.uk/images/klaus.jpg"></img>
-<!--- Klaus Kotschenreuther -->
-<p>
-Klaus Kotschenreuther, born in the city of Leipzig, East Germany in
-1942 and has been living permanently in Denmark since 1963. He has an
-education in communication and visual marketing, which he has used
-until 1999 by working for different international brand
-business. Since then, he try to concentrate on life quality, mainly by
-practicing and teaching tai ji.
-</p>
+  <div class="history-container classes-container link-container">
+    <a href="#klaus-popup" class="animated_popup"><h1>Instructor: Klaus Kotschenreuther</h1></a>
+    <div id="klaus-popup" class="image-popup" style="display:none">
+      <h3>Klaus Kotschenreuther</h3>
+      <img src="http://www.taichispirit.org.uk/images/klaus.jpg"></img>
+      <!--- Klaus Kotschenreuther -->
+      <p>
+      Klaus Kotschenreuther, born in the city of Leipzig, East Germany in
+      1942 and has been living permanently in Denmark since 1963. He has an
+      education in communication and visual marketing, which he has used
+      until 1999 by working for different international brand
+      business. Since then, he try to concentrate on life quality, mainly by
+      practicing and teaching tai ji.
+      </p>
 
-<p>
+      <p>
 
-Klaus been interested in oriental art and philosophy since his
-teens. His first time experience with tai ji was in 1984, followed by
-regularly participation in Master Kai Ying Tung's workshops in Denmark
-from 1987 - 1993.
+      Klaus been interested in oriental art and philosophy since his
+      teens. His first time experience with tai ji was in 1984, followed by
+      regularly participation in Master Kai Ying Tung's workshops in Denmark
+      from 1987 - 1993.
 
-</p>
+      </p>
 
-<p>
+      <p>
 
-From the beginning of year 1994 until 1999, he was invited to study
-under master Patrick Kelly (New Zealand), a long term student of
-Grandmaster Huang Sheng-Shyan. Following different workshops in
-different countries like Germany, France and Italy, he received
-teaching of the Cheng Man-Ching Yang Long Form, fixed push-hands,
-White Crane Gong Fu and loosening exercises.
-</p>
+      From the beginning of year 1994 until 1999, he was invited to study
+      under master Patrick Kelly (New Zealand), a long term student of
+      Grandmaster Huang Sheng-Shyan. Following different workshops in
+      different countries like Germany, France and Italy, he received
+      teaching of the Cheng Man-Ching Yang Long Form, fixed push-hands,
+      White Crane Gong Fu and loosening exercises.
+      </p>
 
-<p>
-Klaus started "friends of t'ai ji" and teaching in southern part of
-Denmark in 1991. He especially values the meditative and personal
-challenge side of the art of tai ji. Also appreciate the martial art
-aspect. As an alternative approach, he also take advantage of tai ji's
-attitude, when he is giving lectures to people with mental failures,
-young addicts of drugs, criminals etc.
-</p>
+      <p>
+      Klaus started "friends of t'ai ji" and teaching in southern part of
+      Denmark in 1991. He especially values the meditative and personal
+      challenge side of the art of tai ji. Also appreciate the martial art
+      aspect. As an alternative approach, he also take advantage of tai ji's
+      attitude, when he is giving lectures to people with mental failures,
+      young addicts of drugs, criminals etc.
+      </p>
 
-<p>
-The first time Klaus participated at a workshop with Master Alex Dong,
-was in Greece in 2007. Already knowing some tai ji based on 23 years
-experience, he got hooked and inspired on the clearness of Master
-Alex's teaching.
-</p>
+      <p>
+      The first time Klaus participated at a workshop with Master Alex Dong,
+      was in Greece in 2007. Already knowing some tai ji based on 23 years
+      experience, he got hooked and inspired on the clearness of Master
+      Alex's teaching.
+      </p>
 
-<p>
-Klaus has since followed the workshops of Alex Dong and will
-continue. It gives him the opportunity to learn more deeper sections
-of tai ji, which he is happy to transfer to his own students.
-</p>
-</div>
+      <p>
+      Klaus has since followed the workshops of Alex Dong and will
+      continue. It gives him the opportunity to learn more deeper sections
+      of tai ji, which he is happy to transfer to his own students.
+      </p>
+    </div>
 
-<p>Class schedule - <a href="http://taijisvenner.dk/" target="_blank">http://taijisvenner.dk</a></p>
-</div>
+    <p>Class schedule: <a href="http://taijisvenner.dk/" target="_blank">http://taijisvenner.dk</a></p>
+  </div>
+
 </section>
+
 <footer>
-<nav class="footer-homepage">
-<ul class="footer-ul-homepage">
-<li><a href="http://alexdongtaichi.com">Home</a></a></li>
-<li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
-<li><a href="../../classes/">Classes</a></li>
-<li><a href="../../legacy/">Legacy</a></li>
-<li><a href="../../workshops/">Workshops</a></li>
-<li><a href="../../store/">Store</a></li>
-</ul>
-</nav>
+  <nav class="footer-homepage">
+    <ul class="footer-ul-homepage">
+      <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+      <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
+      <li><a href="../../classes/">Classes</a></li>
+      <li><a href="../../legacy/">Legacy</a></li>
+      <li><a href="../../workshops/">Workshops</a></li>
+      <li><a href="../../store/">Store</a></li>
+    </ul>
+  </nav>
 </footer>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
 <script src="../../assets/js/jquery.popup.js"></script>
 <script>
@@ -161,4 +169,7 @@ return c*(t/=d)*t*((s+1)*t - s) + b;
 }
 });
 </script>
+
 </body>
+
+</html>
