fixed minor spacing issue

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -73,8 +73,7 @@
         <br>Fajin Energy
         <br>Push with other Enthusiasts
         <br>Deeper understanding of Taiji principles</p>
-        <p>There will be socializing in the
-        <br>evenings and free Push Hands
+        <p>There will be socializing in the evenings and free Push Hands
         <br>Bonfire Saturday
         <br>BYOB
         <br>Musical Instruments are welcome</p>
