--- a/workshops/index.html
+++ b/workshops/index.html
@@ -27,7 +27,7 @@
   </header>
 
   <div class="header-background">
-    <h1>Workshops</h1>
+    <h1>Workshops 2015</h1>
     <h3>Upcoming Intense And Focused Training Around The World</h3>
   </div>
 
@@ -52,7 +52,7 @@
       </div>
 
 
-      <a href="#ny2015-popup" class="animated_popup"><h1>North American Push Hands 2015</h1></a>
+      <a href="#ny2015-popup" class="animated_popup"><h1>North American Push Hands</h1></a>
       <h2>June 5th - June 8th 2015</h2>
       <div id="ny2015-popup" style="display:none" class="image-popup" class="book-details-popup">
 
@@ -86,7 +86,7 @@
         <p>For more information <a href="mailto:NYDongTaiChi@gmail.com">NYDongTaiChi@gmail.com</a></p>
       </div>
 
-      <a href="#euro2015-popup" class="animated_popup"><h1>European Tour 2015</h1></a>
+      <a href="#euro2015-popup" class="animated_popup"><h1>European Tour</h1></a>
       <h2>June 20th 2015 - July 3rd 2015</h2>
 
       <div id="euro2015-popup" style="display:none" class="image-popup" class="book-details-popup">
