fixed spacing issues on news brunswick class

--- a/classes/newbrunswick/index.html
+++ b/classes/newbrunswick/index.html
@@ -31,50 +31,49 @@
   </div>
 
   <section class="history-classes">
+
     <div class="history-container classes-container">
-    <div class="history-container classes-container instructor-container">
       <a href="#claireleblanc-popup" class="animated_popup"><h1>Instructor: Claire LeBlanc</h1></a>
-        <div id="claireleblanc-popup" class="image-popup" style="display:none">
-          <h3>Claire LeBlanc</h3>
-          <p>Claire LeBlanc was first introduced to tai chi in 1998 in Moncton, New Brunswick while looking for an activity that would benefit the overall health. Having practiced Karate in her adolescence, she always held an interest in martial arts and became interested in pursuing the internal martial art of tai chi chuan.</p>
+      <div id="claireleblanc-popup" class="image-popup" style="display:none">
+        <h3>Claire LeBlanc</h3>
+        <p>Claire LeBlanc was first introduced to tai chi in 1998 in Moncton, New Brunswick while looking for an activity that would benefit the overall health. Having practiced Karate in her adolescence, she always held an interest in martial arts and became interested in pursuing the internal martial art of tai chi chuan.</p>
 
-          <p>In 1999, she began her studies of the Dong family style with the late Walter Tait and Master Alex Dong. She attended Master Dong's first intensive workshop in Moncton in 1999. She was impressed with Master Dongs abilities, great presence, teaching and humbleness. She began to assist in teaching classes in 2001 and then started to teach classes on her own in 2003. She became a Certified Instructor in 2008.</p>
+        <p>In 1999, she began her studies of the Dong family style with the late Walter Tait and Master Alex Dong. She attended Master Dong's first intensive workshop in Moncton in 1999. She was impressed with Master Dongs abilities, great presence, teaching and humbleness. She began to assist in teaching classes in 2001 and then started to teach classes on her own in 2003. She became a Certified Instructor in 2008.</p>
 
-          <p>Her main goal in teaching tai chi is to be able to let students discover for themselves the many benefits that this internal martial art can offer them. She feels that the benefits of tai chi practice can vary from person to person, but overall, tai chi practice leads to a sense of physical, emotional, mental and spiritual well-being. She also believes that tai chi leads to better self-understanding and brings balance in all aspects of ones life.</p>
+        <p>Her main goal in teaching tai chi is to be able to let students discover for themselves the many benefits that this internal martial art can offer them. She feels that the benefits of tai chi practice can vary from person to person, but overall, tai chi practice leads to a sense of physical, emotional, mental and spiritual well-being. She also believes that tai chi leads to better self-understanding and brings balance in all aspects of ones life.</p>
 
-          <p>Claire teaches tai chi in the Greater Moncton Area and Bouctouche and continues her studies of tai chi by attending intensive workshops with Master Alex Dong in Canada and the United States. She is honoured to be part of a life-long journey of learning with Master Alex Dong and the Alex Dong International Taijiquan Association. </p>
-        </div>
-
-      <h1>Moncton</h1>
-        <p>Wednesdays 8:00 - 9:00 pm
-        <br>Crossman Community Centre – Kay Arena, 99 Wynwood Drive</p>
-
-      <h1>Bouctouche</h1>
-        <p>Tuesdays 7:00 - 9:00 pm
-        <br>Centre culturel de Kent-Sud, 5 Irving Blvd
-        <br>Contact Claire LeBlanc 506-855-6609 or Email: <a href="mailto:atlantic_taiji@hotmail.com">atlantic_taiji@hotmail.com</a></p>
-
+        <p>Claire teaches tai chi in the Greater Moncton Area and Bouctouche and continues her studies of tai chi by attending intensive workshops with Master Alex Dong in Canada and the United States. She is honoured to be part of a life-long journey of learning with Master Alex Dong and the Alex Dong International Taijiquan Association. </p>
       </div>
+
+      <p><strong>Moncton</strong>
+      <br>Wednesdays 8:00 - 9:00 pm
+      <br>Crossman Community Centre – Kay Arena, 99 Wynwood Drive</p>
+
+      <p><strong>Bouctouche</strong>
+      <br>Tuesdays 7:00 - 9:00 pm
+      <br>Centre culturel de Kent-Sud, 5 Irving Blvd
+      <br>Contact Claire LeBlanc 506-855-6609 or Email: <a href="mailto:atlantic_taiji@hotmail.com">atlantic_taiji@hotmail.com</a></p>
+    </div>
+
     <div class="history-container classes-container instructor-container">
       <a href="#pierre-popup" class="animated_popup"><h1>Instructor: Pierre Beriault</h1></a>
-        <div id="pierre-popup" class="image-popup" style="display:none">
-          <h3>Pierre Beriault</h3>
-           <img src="http://www.taichispirit.org.uk/images/pierre.jpg">
-          <p>I have been practising Yang style taiji since 1991, and the Dong family style, with Alex, since 1998. Whereas my former teacher was more interested in the flowing grace of the movements, Alex has made me discover the martial aspect of this art, something which I find brings true meaning to my practice.</p>
-          <p>Taiji has brought me balance, peace and a sense of community with the many practitioners I have met so far, as well as long-lasting friendships. </p>
-        </div>
-        
-     <h1>Moncton</h1>
-      <p>CEPS at UdeM
-      <br>Tuesdays, 17h30</p>
+      <div id="pierre-popup" class="image-popup" style="display:none">
+        <h3>Pierre Beriault</h3>
+        <img src="http://www.taichispirit.org.uk/images/pierre.jpg">
+        <p>I have been practising Yang style taiji since 1991, and the Dong family style, with Alex, since 1998. Whereas my former teacher was more interested in the flowing grace of the movements, Alex has made me discover the martial aspect of this art, something which I find brings true meaning to my practice.</p>
+        <p>Taiji has brought me balance, peace and a sense of community with the many practitioners I have met so far, as well as long-lasting friendships. </p>
+      </div>
 
-     <h1>Memramcook</h1>
-     <p>Ecole Abbey-Landry
+     <p><strong>Moncton</strong>
+     <br>CEPS at UdeM
+     <br>Tuesdays, 17h30</p>
+
+     <p><strong>Memramcook</strong>
+     <br>Ecole Abbey-Landry
      <br>Mondays, 21h
-    <br>Contact: Pierre Bériault, 506-863-4056 or <a href="mailto:beriaup@nb.sympatico.ca">beriaup@nb.sympatico.ca</a> </p>
+     <br>Contact: Pierre Bériault, 506-863-4056 or <a href="mailto:beriaup@nb.sympatico.ca">beriaup@nb.sympatico.ca</a> </p>
+    </div>
 
-    </div>
-    </div>
   </section>
 
   <footer>
