fixed spacing issues in workshop index, added new class pacific grove, changed na push hands register form

--- a/classes/index.html
+++ b/classes/index.html
@@ -53,6 +53,7 @@
       <h2>United States</h2>
       <ul class="classes-ul">
         <li><a href="carmelvalley/">Carmel Valley, California</a></li>
+        <li><a href="pacificgrove/">Pacific Grove, California</a></li>
         <li><a href="santabarbara/">Santa Barbara, California</a></li>
         <li><a href="coloradoutah/">Colorado And Utah Borders</a></li>
         <li><a href="oahu/">Honolulu, Hawaii</a></li>
