--- a/workshops/index.html
+++ b/workshops/index.html
@@ -48,7 +48,7 @@
 
         <p>Contact: Alex Dong <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
 
-        <p><a href="Westwater2015.docx" target="_blank">Download a booking form</a></p>
+        <p>Download a booking form in <a href="Westwater2015.docx" target="_blank">Word</a> or <a href="Westwater2015.pdf" target="_blank">PDF</a></p>
       </div>
 
 
