--- a/classes/thurstoncounty/index.html
+++ b/classes/thurstoncounty/index.html
@@ -42,7 +42,7 @@
   <p>Tai chi 103 Wednesdays 5:30-6:30pm
   <br>Fusion Integrated Body Studio
   <br>302 Columbia St. NW Olympia 360-596-9696
-  <p>$20 per class or 6 non-expiring classes for $100</p>
+  <br>$20 per class or 6 non-expiring classes for $100</p>
   <p>Tai Chi 101 Thursday 6:45pm
   <br>Tai Chi 102 Thursday 7:45pm
   <br>Focus Fitness
