fixed thurston copy spacing issue, added a new dvd

--- a/classes/thurstoncounty/index.html
+++ b/classes/thurstoncounty/index.html
@@ -31,28 +31,26 @@
   </div>
 
    <section class="history-classes">
+
   <div class="history-container classes-container">
     <a href="#andyholmes-popup" class="animated_popup"><h1>Instructor: Andy Holmes</h1></a>
-  <div id="andyholmes-popup" class="image-popup" style="display:none">
-        <img src="../../assets/images/instructor/andyholmes.jpg">
-  <h3>Andy Holmes</h3>
-    <p>Andy Holmes started the Pacific Northwest School in the late 1990's and continues to teach around the Seattle/Portland area. He instructs classes and provides services as a Tai Chi consultant for a wide range of health facilities; hospitals and rehabilitation centers, martial arts schools, state agencies, and private fitness groups. His time as a teacher is matched with practice and continual education. Andy never stops learning, and sharing his own growth path has allowed Andy to effectively teach people Tai Chi through many group classes and private lessons. He has traveled the globe to further his skills including on-site training in China, Canada, England, Greece, Thailand, Brazil, and 7 states in the USA. His goal is to better his taiji practice and grow awareness in himself and others through positive action as a wellness professional spreading the teaching of Master Alex.</p>
-</div>
-
-  <p>Tai chi 103 Wednesdays 5:30-6:30pm
-  <br>Fusion Integrated Body Studio
-  <br>302 Columbia St. NW Olympia 360-596-9696
-  <br>$20 per class or 6 non-expiring classes for $100</p>
-  <p>Tai Chi 101 Thursday 6:45pm
-  <br>Tai Chi 102 Thursday 7:45pm
-  <br>Focus Fitness
-  <br>1801 West Bay Dr NW Suite 104 Olympia
-  <br>Classes are $15 each. '102' students can attend both
-  Thursday classes for $20</p>
-
-  <br><a href="http://andyholmes.us/Schedule.html" target="_blank">Full Class Schedule</a>
-  <br>Email: <a href="mailto:slowset@gmail.com">slowset@gmail.com</a></p>
-</div>
+    <div id="andyholmes-popup" class="image-popup" style="display:none">
+      <img src="../../assets/images/instructor/andyholmes.jpg">
+      <h3>Andy Holmes</h3>
+      <p>Andy Holmes started the Pacific Northwest School in the late 1990's and continues to teach around the Seattle/Portland area. He instructs classes and provides services as a Tai Chi consultant for a wide range of health facilities; hospitals and rehabilitation centers, martial arts schools, state agencies, and private fitness groups. His time as a teacher is matched with practice and continual education. Andy never stops learning, and sharing his own growth path has allowed Andy to effectively teach people Tai Chi through many group classes and private lessons. He has traveled the globe to further his skills including on-site training in China, Canada, England, Greece, Thailand, Brazil, and 7 states in the USA. His goal is to better his taiji practice and grow awareness in himself and others through positive action as a wellness professional spreading the teaching of Master Alex.</p>
+    </div>
+    <p>Tai chi 103 Wednesdays 5:30-6:30pm
+    <br>Fusion Integrated Body Studio
+    <br>302 Columbia St. NW Olympia 360-596-9696
+    <br>$20 per class or 6 non-expiring classes for $100</p>
+    <p>Tai Chi 101 Thursday 6:45pm
+    <br>Tai Chi 102 Thursday 7:45pm
+    <br>Focus Fitness
+    <br>1801 West Bay Dr NW Suite 104 Olympia
+    <br>Classes are $15 each. '102' students can attend both
+    Thursday classes for $20
+    <p><a href="http://andyholmes.us/Schedule.html" target="_blank">Full Class Schedule</a>
+    <br>Email: <a href="mailto:slowset@gmail.com">slowset@gmail.com</a></p>
 
     <div class="history-container classes-container instructor-container">
 
