--- a/store/index.html
+++ b/store/index.html
@@ -107,17 +107,17 @@
       <h1>DVDs</h1>
 
       <div class="store-book-container">
-        <h3>Hong Kong 2006</h3>
-        <h4>$65.00</h4>
-        <a href="#hongkong-popup" class="animated_popup"><img src="../assets/images/tape7.png"></a>
-        <h5><a href="#hongkong-popup" class="animated_popup book-details-link">Book Details</a></h5>
-        <div id="hongkong-popup" style="display:none">
-          <h3>Hong Kong 2006</h3>
-          <p>Master Alex Dong has produced an extraordinary series of demonstration videos, and all three are available in DVD format, and include full length demonstrations and describe the benefits of each form. Along with music soundtrack, the video captures the essence of Master Alex's softness and mastery through close-ups of his hands and face.</p>
+        <h3><span class="red-highlight">NEW!</span> Dong Taiji Sticks</h3>
+        <h4>$40.00</h4>
+        <a href="#taijisticks-popup" class="animated_popup"><img src="../assets/images/tape9.png"></a>
+        <h5><a href="#taijisticks-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <div id="taijisticks-popup" style="display:none">
+          <h3>Dong Style Taiji Sticks</h3>
+          <p>The sticks form has the same movements and sequence as the advance Saber form. But the energies and techniques are executed differently. The sticks are even quicker than the Saber and movements comes more from the wrists. Two sticks are used to block, strike and balance each other. Sticks are designed for quick strikes.</p>
         </div>
         <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
         <input type="hidden" name="cmd" value="_s-xclick">
-        <input type="hidden" name="hosted_button_id" value="CYS2ZQFCB6NME">
+        <input type="hidden" name="hosted_button_id" value="7K7FE6P576FXW">
         <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
         </form></h6>
       </div>
@@ -187,22 +187,6 @@
       </div>
 
       <div class="store-book-container">
-        <h3>Dong History Tape</h3>
-        <h4>$65.00</h4>
-        <a href="#donghistory-popup" class="animated_popup"><img src="../assets/images/tape4.png"></a>
-        <h5><a href="#donghistory-popup" class="animated_popup book-details-link">Book Details</a></h5>
-        <div id="donghistory-popup" style="display:none">
-          <h3>Dong History Tape</h3>
-          <p>Follow the history of Four Generations of the Dong Family, featuring Dong (Tung) Ying Chieh, Dong Hu (Tung Fu) Ling, and Dong Zeng Chen performing the 108 sequence form of the Traditional Yang Style Tai Chi Chuan.</p>
-        </div>
-        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-        <input type="hidden" name="cmd" value="_s-xclick">
-        <input type="hidden" name="hosted_button_id" value="ZYK8PUW7ZAMUJ">
-        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
-        </form></h6>
-      </div>
-
-      <div class="store-book-container">
         <h3>Three Treasures</h3>
         <h4>$30.00</h4>
         <a href="#threetreasures-popup" class="animated_popup"><img src="../assets/images/tape5.png"></a>
@@ -230,6 +214,38 @@
         <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
         <input type="hidden" name="cmd" value="_s-xclick">
         <input type="hidden" name="hosted_button_id" value="672TA6YKL6582">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form></h6>
+      </div>
+
+      <div class="store-book-container">
+        <h3><span class="red-highlight">SALE!</span> Hong Kong 2006</h3>
+        <h4>$40.00</h4>
+        <a href="#hongkong-popup" class="animated_popup"><img src="../assets/images/tape7.png"></a>
+        <h5><a href="#hongkong-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <div id="hongkong-popup" style="display:none">
+          <h3>Hong Kong 2006</h3>
+          <p>Master Alex Dong has produced an extraordinary series of demonstration videos, and all three are available in DVD format, and include full length demonstrations and describe the benefits of each form. Along with music soundtrack, the video captures the essence of Master Alex's softness and mastery through close-ups of his hands and face.</p>
+        </div>
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="CYS2ZQFCB6NME">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form></h6>
+      </div>
+
+      <div class="store-book-container">
+        <h3><span class="red-highlight">SALE!</span> Dong History Tape</h3>
+        <h4>$40.00</h4>
+        <a href="#donghistory-popup" class="animated_popup"><img src="../assets/images/tape4.png"></a>
+        <h5><a href="#donghistory-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <div id="donghistory-popup" style="display:none">
+          <h3>Dong History Tape</h3>
+          <p>Follow the history of Four Generations of the Dong Family, featuring Dong (Tung) Ying Chieh, Dong Hu (Tung Fu) Ling, and Dong Zeng Chen performing the 108 sequence form of the Traditional Yang Style Tai Chi Chuan.</p>
+        </div>
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="ZYK8PUW7ZAMUJ">
         <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
         </form></h6>
       </div>
